--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.jphilli85.deviceinfo"
-      android:versionCode="0514001"
-      android:versionName="1.0">      
+      android:versionCode="0514101"
+      android:versionName="1.0.1">      
     <uses-sdk 
     	android:minSdkVersion="5" 
-    	android:targetSdkVersion="8" />    	
+    	android:targetSdkVersion="8" />      
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />     	  	
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />	
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".DeviceInfoActivity"
