--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.jphilli85.deviceinfo"
-      android:versionCode="0514101"
-      android:versionName="1.0.1">      
+      android:versionCode="0714102"
+      android:versionName="1.0.2">      
+    
     <uses-sdk 
-    	android:minSdkVersion="5" 
-    	android:targetSdkVersion="8" />      
-    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />     	  	
+    	android:minSdkVersion="7" 
+    	android:targetSdkVersion="15" />      
+    
+    <uses-feature 
+        android:name="android.hardware.touchscreen" 
+        android:required="false" />     	  	
+	
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />	
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".DeviceInfoActivity"
-                  android:theme="@android:style/Theme.NoTitleBar">
+    
+    <application 
+        android:icon="@drawable/icon" 
+       	android:label="@string/app_name"
+       	android:theme="@style/Theme.Sherlock">
+        <activity android:name=".DeviceInfoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
