working with fragments

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:icon="@drawable/icon" 
        	android:label="@string/app_name"
        	android:theme="@style/Theme.Sherlock">
-        <activity android:name=".DeviceInfoActivity">
+        <activity android:name="com.jphilli85.deviceinfo2.DeviceInfoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
