--- a/project.properties
+++ b/project.properties
@@ -7,7 +7,7 @@
 # "ant.properties", and override values to adapt the script to your
 # project structure.
 
-proguard.config=proguard.cfg
+proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 # Project target.
 target=Google Inc.:Google APIs:15
-android.library.reference.1=../com_actionbarsherlock
+android.library.reference.1=../com_actionbarsherlock4.0.1
