--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<!-- Needed to use WifiManager.startScan() -->
-	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />	
+<!-- 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />	 -->
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
