--- a/project.properties
+++ b/project.properties
@@ -10,4 +10,4 @@
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 # Project target.
 target=Google Inc.:Google APIs:15
-android.library.reference.1=../com_actionbarsherlock4.0.1
+android.library.reference.1=../com_actionbarsherlock
