--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,7 @@
 	
     
     <application 
+        android:name=".app.DeviceInfo"
         android:icon="@drawable/icon" 
        	android:label="@string/app_name"
        	android:theme="@style/Theme.Sherlock">       	
