--- a/project.properties
+++ b/project.properties
@@ -9,5 +9,5 @@
 
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 # Project target.
-target=Google Inc.:Google APIs:15
-android.library.reference.1=../com_actionbarsherlock
+target=Google Inc.:Google APIs:16
+android.library.reference.1=../ActionBarSherlock/library
