removed dependency on ActionBarSherlock

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,42 @@
-########################
-# Android ignore stuff #
-########################
+# built application files
+*.apk
+*.ap_
 
-bin/
-gen/
+# files for the dex VM
+*.dex
+
+# Java class files
 *.class
 
-Thumbs.db
+# generated files
+bin/
+gen/
 
-# Ubuntu lock
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Eclipse project files
+.classpath
+.project
+.settings
+
+# Intellij / Android Studio files
+.idea
+*.iml
+build
+build.gradle
+out/
+
+
+
+# OS garbage
+Thumbs.db
+.DS_Store
+
+# File locks
 .~*
+~*
+
+# Private stuff
+.private
+Private.java
