--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,8 @@
       android:versionName="1.0.2">
 
     <uses-sdk
-    	android:minSdkVersion="7"
-    	android:targetSdkVersion="15" />
+    	android:minSdkVersion="15"
+    	android:targetSdkVersion="18" />
 
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.CAMERA" />
@@ -37,7 +37,7 @@
         android:name=".app.DeviceInfo"
         android:icon="@drawable/icon"
        	android:label="@string/app_name"
-       	android:theme="@style/Theme.Sherlock">
+       	android:theme="@android:style/Theme.Holo">
         <activity android:name=".app.DeviceInfoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
